RESOLVED FIXED279488
_getTextFragmentMatchWithCompletionHandler returns an empty string instead of nil when there is no text fragment match
https://bugs.webkit.org/show_bug.cgi?id=279488
Summary _getTextFragmentMatchWithCompletionHandler returns an empty string instead of...
Tim Horton
Reported 2024-09-10 21:47:34 PDT
_getTextFragmentMatchWithCompletionHandler returns an empty string instead of nil when there is no text fragment match
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-10 21:47:44 PDT
Tim Horton
Comment 2 2024-09-10 21:50:04 PDT
EWS
Comment 3 2024-09-11 00:15:14 PDT
Committed 283471@main (3dc0842188b3): <https://commits.webkit.org/283471@main> Reviewed commits have been landed. Closing PR #33443 and removing active labels.
EWS
Comment 4 2024-09-12 20:09:41 PDT
Committed 283286.27@safari-7620-branch (7677b085f0cf): <https://commits.webkit.org/283286.27@safari-7620-branch> Reviewed commits have been landed. Closing PR #1755 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.