_getTextFragmentMatchWithCompletionHandler returns an empty string instead of nil when there is no text fragment match https://bugs.webkit.org/show_bug.cgi?id=279488 rdar://135775793

Reviewed by Richard Robinson.

The intent of _getTextFragmentMatchWithCompletionHandler is that it returns nil
if there is no text fragment match, but String -> NSString conversion coalesces
the null String to an empty NSString instead of nil. Fix this.

Sadly, while I added a test for this, EXPECT_WK_STREQ *also* does coalescing that
made the test falsely pass. Add an extra test condition for actually-nil.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _getTextFragmentMatchWithCompletionHandler:]):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/TextFragments.mm:
(TEST(WebKit, GetTextFragmentMatch)):

Canonical link: https://commits.webkit.org/283471@main